# limepress

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.rst  REQUIREMENTS.development.txt  REQUIREMENTS.linting.txt  REQUIREMENTS.testing.txt  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
limepress/: __init__.py  _logging.py  _pytest.py  build_environment.py  command_line.py  context.py  default_settings.py  dependency_manager.py  file_system.py  parsing.py  plugin_manager.py  settings.py  templating.py  unit.py
limepress/plugins/: html_parser.py
limepress/templates/: page.html
limepress/templates/snippets/: pre.html
tests/: conftest.py  test_context_setup.py  test_file_copy.py  test_package.py  test_path_resolving.py  test_rendering.py  test_unit_parsing.py
tests/test-files/: simple-unit.html  unit-with-multiple-empty-lines.html  unit-without-meta-data.html
