[metadata]
description = LimePress
long_description = file: README.rst
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Topic :: System :: Software Distribution
    Environment :: Web Environment
